fix(header) : fix menu z-index and auto-hide at footer

--- a/src/components/header/nav/curve/style.module.css
+++ b/src/components/header/nav/curve/style.module.css
@@ -1,4 +1,4 @@
-.svgCurve{
+.svgCurve {
     position: absolute;
     top: 0;
     left: -99px;
@@ -6,4 +6,5 @@
     height: 100%;
     fill: rgb(41, 41, 41);
     stroke: none;
+    z-index: 1;
 }
