--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -112,7 +112,7 @@
     transform: scale(0);
     position: fixed;
     right: 0px;
-    z-index: 4;
+    z-index: 101;
 }
 
 .headerButtonContainer .button {
